--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,12 @@
 
 @import "./utils/mixin";
+@import "./utils/mixin-media";
 @import "./utils/variables";
 @import "./utils/keyframes";
+@import "./utils/maps";
+@import "./composants/anim-load";
 @import "./composants/new";
+@import "./composants/heart-like";
 @import "./bases/normalize";
 @import "./bases/typographie";
 @import "./layout/header-acceuil";
