--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -6,3 +6,64 @@
         transform: scale(1);
     }
 }
+
+@keyframes circle {
+    0%{
+        transform: translateX(0px) scaleY(1) rotate(0deg);
+    }
+    15%{
+        transform: scaleY(1) rotate(0deg);
+    }
+    50%{
+        transform: translateX(500px) scaleY(0.2) rotate(180deg);
+    }
+    60%{
+        transform: translateX(500px) scaleY(0.2) rotate(180deg);
+    }
+    100%{
+        transform: translateX(0px) scaleY(1) rotate(360deg);
+    }
+}
+@keyframes circle-2 {
+    0%{
+        transform: translateX(-400px) scaleY(0.2);
+    }
+    15%{
+        transform: translateX(-400px) scaleY(0.2) rotate(180deg);
+    }
+    40%{
+        transform: translateX(0px) scaleY(1);
+    }
+    60%{
+        transform: translateX(0px) scaleY(1);
+    }
+    100%{
+        transform: scaleY(1) rotate(0deg);
+    }
+}
+@keyframes food-name {
+    0%{
+        opacity: 0;
+    }
+    15%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+    
+}
+@keyframes gone {
+    0%{
+        opacity: 1;
+    }
+    75%{
+        opacity: 1;
+        transform: scale(1);
+    }
+    100%{
+        opacity: 0;
+        z-index: 0;
+        transform: scale(0);
+    }
+}
